--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Suyog</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <title>Suyog</title>
+    <base href="/" />
+    <link rel="stylesheet" href="./assets/css/mainStyle.css" />
+    <link rel="stylesheet" href="./assets/css/toastr.css" />
+    <link rel="stylesheet" href="./assets/css/custom.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <body>
+    <!-- <register></register> -->
+    <app-root></app-root>
+    <!-- <test></test> -->
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script>
+      feather.replace();
+    </script>
+  </body>
 </html>
